<resources>
    <string name="app_name">TakeAnUmbrella</string>

    <!-- Strings related to Home -->
    <string name="title_home">Home</string>

    <!-- Strings related to Rental Locations -->
    <string name="title_rental_locations">Rental locations</string>
    <string name="search_hint">Поиск…</string>

    <string name="rentalPlaceAddress">Адрес: </string>
    <string name="rentalPlaceAddressValue">Васильевский остров, Средний проспект, 5</string>

    <string name="vacantUmbrellasCount">Доступных зонтиков: </string>
    <string name="vacantUmbrellasCountValue">154</string>

    <string name="rentalLocationListNumber">Локация №</string>
    <string name="rentalLocationListNumberValue">344</string>

    <string name="goToLocation">Показать</string>

    <string name="wind_blows">Ветер воет?</string>
    <string name="umbrella_covers">Зонт укроет!</string>

    <!-- Strings related to Profile -->
    <string name="title_profile">Profile</string>

    <!-- Strings related to ProfileHistoryItem -->
    <string name="rental_cost_view_text">Стоимость:</string>
    <string name="rental_duration_view_text">Время:</string>
    <string name="rental_address_text">Место аренды:</string>
    <string name="rental_address_text_value">город, улица, дом</string>

    <!-- Strings related to login -->
    <string name="title_login">Вход</string>

    <string name="prompt_login_email">Почта</string>
    <string name="prompt_login_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome_login">Добро пожаловать!</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="invalid_email">Некорректная почта пользователя</string>
    <string name="login_failed">Вход неудачен</string>
    <string name="no_account_text">Нет аккаунта?</string>

    <!--         Strings related to register -->
    <string name="title_register">Регистрация</string>

    <string name="prompt_register_name_hint">Иван</string>
    <string name="prompt_register_name">Имя</string>
    <string name="prompt_register_phone_hint">+79999999999</string>
    <string name="prompt_register_phone">Телефон</string>
    <string name="prompt_register_email_hint">ivan@mail.ru</string>
    <string name="prompt_register_email">Почта</string>
    <string name="prompt_register_password_hint">********</string>
    <string name="prompt_register_password">Придумайте пароль</string>
    <string name="prompt_register_password_repeat_hint">********</string>
    <string name="prompt_register_password_repeat">Повторите пароль</string>

    <string name="register_button_text">Зарегистрироваться</string>
    <string name="invalid_name">Некорректное имя!</string>
    <string name="invalid_phone">"Неверный формат телефона!"</string>
    <string name="email_invalid">"Неверный формат почты!"</string>
    <string name="invalid_password">Пароль должен содержать минимум 5 знаков</string>
    <string name="invalid_passwordRepeat">"Пароли не совпадают"</string>
    <string name="welcome_register">"Добро пожаловать"</string>
    <string name="registration_failed">Регистрация неудачна</string>


</resources>