<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9E8D3"
    tools:context=".ui.rentallocations.RentalLocationsFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.90">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <ImageView
                android:id="@+id/rainImage"
                android:layout_width="200dp"
                android:layout_height="110dp"
                android:layout_marginStart="195dp"
                android:layout_marginTop="-30dp"
                android:scaleType="centerInside"
                android:src="@drawable/rain_rental_locations" />

            <ImageView
                android:id="@+id/umbrellaImage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginStart="190dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerInside"
                android:src="@drawable/umbrella_rental_locations" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_blows"
                    android:textColor="#000000"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/umbrella_covers"
                    android:textColor="#000000"
                    android:textSize="36sp" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="250dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="55dp"
            android:background="@drawable/search_bg"
            app:queryHint="@string/search_hint" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@+id/rentalLocationList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="#00000000"
                android:dividerHeight="16dp"
                android:padding="8dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>